<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="action_settings">Settings</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="toggle_fullscreen">Long click to toggle fullscreen</string>
    <string name="title_activity_login">2048</string>

    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_age">Between 2 and 80</string>
    <string name="error_incorrect_age">Between 2 and 80</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="switch_preference_login_sersor">switch_preference_login_sersor</string>
    <string name="switch_preference_pin_sersor">switch_preference_pin_sersor</string>
    <string name="switch_preference_pin_touch">switch_preference_pin_touch</string>
    <string name="gen_preference_pin_checklist">switch_preference_pin_checklist</string>
    <string name="switch_preference_pat_sersor">switch_preference_pat_sersor</string>
    <string name="switch_preference_pat_touch">switch_preference_pat_touch</string>
    <string name="gen_preference_pat_checklist">switch_preference_pat_checklist</string>
    <string name="switch_preference_go2048">switch_preference_go2048</string>


    <string name="sensor_service">Sensor Service</string>
    <string name="sensor_service_sum">Sernsor Data Background</string>
    <string name="touch_collection">Touch Collection</string>
    <string name="touch_collection_sum">Touch Data Background</string>



    <string name="lib_name_rx">RxPatternLockView</string>
    <string name="lib_name">PatternLockView</string>
    <string name="message_pattern_dot_added">Dot added to pattern</string>
    <string name="message_pattern_started">Pattern drawing started</string>
    <string name="message_pattern_detected">Pattern drawing completed</string>
    <string name="message_pattern_cleared">Pattern cleared</string>

</resources>
